--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "plugins": [
       { "transform": "ts-transformer-keys/transformer" }
     ]
